# Sidewinder

./: .gitignore  ADAPTERS.md  Bug.md  CurrentBugs.md  GEMINI_PROMPT.md  Makefile  POSTING.md  SWCLI_CONTEXT.md  SWCLI_PIPELINES.md  SWCLI_SHORTCOMINGS.md  TUI.md  UIAudit.md  logo.txt  logo_colored.txt  logo_oc.txt  logo_sidewinder_colored.txt  pyproject.toml  run.md  sidewinder_doc_review_V1.md  updatecli.md
Documenation/: IMPLEMENTATION.md  PLAN.md  Sidewinder.md  Track.md
scratch/: apply_screens_refactor.py  fix_all.py  fix_all_markup.py  search_git.py  test_logo.py  test_regex.py  test_rich.py  test_tui_startup.py
sidewinder/: __init__.py  __main__.py  cli.py
sidewinder/adapters/: __init__.py  base.py  mt7902.py  rt5370.py  rtl8821au.py
sidewinder/attacks/: __init__.py  deauth.py  evil_twin.py  pmkid.py  wps.py
sidewinder/core/: __init__.py  adapter.py  attack.py  capture.py  cleanup.py  config.py  cracker.py  errors.py  fingerprint.py  intelligence.py  logger.py  monitor.py  rfkill.py  scanner.py  services.py  session.py  subprocess_mgr.py  tooltips.py  vm.py
sidewinder/ui/: __init__.py  app.py  colors.tcss  components.py  screens.py  theme.py  theme_loader.py  themes.py
sidewinder/ui/widgets/: __init__.py  center_middle.py  confirmation.py  help_screen.py
tests/: __init__.py  test_adapter.py  test_capture.py  test_cleanup.py  test_cracker.py  test_errors.py  test_monitor.py  test_scanner.py  test_services.py  test_session.py  test_subprocess.py  test_ui.py
