[project]
name = "sidewinder"
version = "0.1.0"
description = "Native Linux WiFi Audit Tool — terminal-first, zero bloat"
requires-python = ">=3.11"
license = { text = "GPL-2.0" }
dependencies = [
    "textual>=0.40",    # Full TUI framework (keyboard input + screen management + async)
    "scapy>=2.5",       # Packet parsing (EAPOL handshake detection via proper layer)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "pyright>=1.1",
]

[project.scripts]
sidewinder = "sidewinder.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sidewinder*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.11"
strict = true
